Changes for avatar and IE msg

--- a/botui/index.html
+++ b/botui/index.html
@@ -37,7 +37,7 @@
         return /Trident\/|MSIE/.test(window.navigator.userAgent);  // IE 10 and IE 11
     }
     if (isIE()) {
-        document.getElementById('noSupport').innerHTML = "This website will offer limited functionality in this browser. For now we only support the recent versions of major browsers like Chrome, Firefox and Edge.";
+        document.getElementById('noSupport').innerHTML = "This website will not work on Internet Explorer";
 		document.getElementById('noSupport').style.fontWeight = "900"
 		document.getElementById('noSupport').style.fontSize = "medium"
     }
