Changes for bot in open-mode and Edge msg

--- a/botui/index.html
+++ b/botui/index.html
@@ -18,8 +18,10 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	
+<!-- <link rel="stylesheet" href="css/style_old.css"> -->
     <link rel="stylesheet" href="css/style.css">
-	<!-- CSS -->
+<!-- CSS -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -28,22 +30,12 @@
 
 </head>
 
+<!----- Browser Messages !------------>
+
 <br> </br>
 <br> </br>
 <div id="noSupport" align ='center'></div>
 
-<script>
-    function isIE() {
-        return /Trident\/|MSIE/.test(window.navigator.userAgent);  // IE 10 and IE 11
-    }
-    if (isIE()) {
-        document.getElementById('noSupport').innerHTML = "This website will not work on Internet Explorer";
-		document.getElementById('noSupport').style.fontWeight = "900"
-		document.getElementById('noSupport').style.fontSize = "medium"
-    }
-</script>
-
-<![if !IE]>
 
 <div class="container">
 
@@ -62,23 +54,23 @@
 
       <mybot></mybot>
 
-    </div><!--container end-->
+</div><!--container end-->
 
 
 
-  <div id="body">
+ <div id="body">
 
-  <div id="chat-circle" class="btn btn-raised">
-          <div id="chat-overlay"></div>
-  		    <i class="material-icons md-48">adb</i>
-  	</div>
-
-    <div class="chat-box">
-      <div class="chat-box-header">
+  <!-- <div id="chat-circle" class="btn btn-raised"> -->
+          <!-- <div id="chat-overlay"></div> -->
+  		    <!-- <i class="material-icons md-48">adb</i> -->
+  	<!-- </div> -->
+ 
+<div class="chat-box">
+        <div class="chat-box-header">
          Liberty (Chat Now)  
         <span class="chat-box-toggle"><i class="material-icons">close</i></span>
-      </div>
-      <div class="messages">
+        </div>
+        <div class="messages">
         <div class="messages-content">
         </div>
         <div class="suggession">
@@ -88,8 +80,8 @@
           <input type="text"  id="MSG" name="MSG" class="message-input" placeholder="Send a message..."/>
         <button type="submit" class="message-submit"><i class="material-icons">send</i></button>
         </form>
-  </div>
-  </div>
+</div>
+</div>
 
 
 
@@ -97,9 +89,24 @@
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
-  <script  src="js/index.js"></script>
-</body>
-
-<![endif]>
+  <script  src="js/index_old.js"></script>
+  
+ <script>
+    function isIE() {
+        return /Trident\/|MSIE/.test(window.navigator.userAgent);  // IE 10 and IE 11
+    }
+    if (isIE()) {
+        document.getElementById('noSupport').innerHTML = "This website will not work on Internet Explorer";
+		document.getElementById('noSupport').style.fontWeight = "900";
+		document.getElementById('noSupport').style.fontSize = "medium";
+		document.getElementById('body').style.visibility = "hidden";
+    }
+	if (/Edge\/\d./i.test(navigator.userAgent)&& (navigator.userAgent.indexOf('Edge') >=0)) {
+        document.getElementById('noSupport').innerHTML = "This website will not work on this version of Edge";
+		document.getElementById('noSupport').style.fontWeight = "700";
+		document.getElementById('noSupport').style.fontSize = "medium";
+		document.getElementById('body').style.display = "none";
+    }
+</script>
 
 </html>
