--- a/botui/index.html
+++ b/botui/index.html
@@ -77,7 +77,7 @@
         </div>
 		</div>
         <form class="message-box" id="mymsg" method="POST">
-          <input type="text"  id="MSG" name="MSG" class="message-input" placeholder="Send a message..."/>
+          <input type="text"  id="MSG" name="MSG" class="message-input" autocomplete="on" placeholder="Send a message..."/>
         <button type="submit" class="message-submit"><i class="material-icons">send</i></button>
         </form>
 </div>
