Change to remove close toggle

--- a/botui/index.html
+++ b/botui/index.html
@@ -68,7 +68,7 @@
 <div class="chat-box">
         <div class="chat-box-header">
          Liberty (Chat Now)  
-        <span class="chat-box-toggle"><i class="material-icons">close</i></span>
+        <!-- <span class="chat-box-toggle"><i class="material-icons">close</i></span> -->
         </div>
         <div class="messages">
         <div class="messages-content">
